--- a/app/src/main/res/layout/slides_layout.xml
+++ b/app/src/main/res/layout/slides_layout.xml
@@ -3,19 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
 
 
     <ImageView
         android:id="@+id/slider_image_bg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@+id/slider_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/worlbgsmaller"
-        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/city"
         tools:ignore="VectorDrawableCompat" />
 
 
