--- a/app/src/main/res/drawable/rounded_corners_button_blue.xml
+++ b/app/src/main/res/drawable/rounded_corners_button_blue.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/colorAccentBlue"/>
+    <solid android:color="#359BD8"/>
 
     <corners
-        android:topLeftRadius="2dp"
-        android:topRightRadius="2dp"
-        android:bottomLeftRadius="2dp"
-        android:bottomRightRadius="2dp" />
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp" />
 
 </shape>
