--- a/app/src/main/res/drawable/rounded_corners_button_green.xml
+++ b/app/src/main/res/drawable/rounded_corners_button_green.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/colorAccentGreen"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp" />
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp" />
 
 </shape>
