--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorAccentGreen</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:typeface">serif</item>
-        <item name="android:fontFamily">@font/roboto</item>
-        <item name="fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
+        <item name="fontFamily">@font/josefin_sans</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:windowDisablePreview">true</item>
         <item name="android:windowIsTranslucent">true</item>
@@ -15,11 +15,11 @@
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/buttonColor</item>
         <item name="android:layout_marginBottom">2dp</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyPopupMenu" parent="Widget.AppCompat.PopupMenu">
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:listPreferredItemHeightSmall">30dp</item>
     </style>
 
@@ -28,7 +28,7 @@
         <item name="android:textSize">26sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/textColor</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <!-- Custom Preference Theme inherits from the v14 support library Material Theme -->
@@ -39,12 +39,12 @@
 
     <style name="textAppearance_view_pager" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowBackground">@drawable/background_custom_dialog</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="AppDrawableTheme" parent="ThemeOverlay.AppCompat.Dark">
@@ -52,12 +52,12 @@
         <item name="colorPrimary">@color/colorAccentGreen</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MySplashScreen" parent="AppTheme">
         <item name="android:windowBackground">@color/colorPrimary</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="ButtonBorder" parent="Widget.AppCompat.Button.Colored" />
@@ -66,7 +66,7 @@
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">12sp</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -75,7 +75,7 @@
         <item name="android:background">@color/colorAccentGreen</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyToolbarPopUp" parent="AppTheme">
@@ -86,7 +86,7 @@
 
     <style name="HeaderTheme" parent="AppTheme">
         <item name="android:textAllCaps">true</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">23sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
@@ -96,13 +96,13 @@
     <!-- Custom Preference Theme inherits from the v14 support library Material Theme -->
     <style name="AppPreferenceTheme" parent="@style/PreferenceThemeOverlay.v14.Material">
         <item name="preferenceStyle">@style/AppPreference</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <!-- Style for an Preference Entry -->
     <style name="AppPreference" parent="@style/Preference.Material">
         <item name="android:layout">@layout/preference_material</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <!--Youtube List Style-->
@@ -114,34 +114,34 @@
     <style name="DialogFullscreen" parent="@style/Preference.Material">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slideup_dialog</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="myFullscreenAlertDialogStyle" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="BottomNavigationTheme" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textColorSecondary">@color/gray</item>
         <item name="android:textSize">8sp</item>
     </style>
     <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">8sp</item>
     </style>
 
     <style name="BottomNavigationView.Active" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">11sp</item>
     </style>
 
@@ -154,12 +154,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
         <item name="android:typeface">serif</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -167,7 +167,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="android:includeFontPadding">false</item>
     </style>
@@ -179,7 +179,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -190,21 +190,21 @@
         <item name="background">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="textAppearance_general">
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="HeaderThemeActivity">
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
