--- a/app/src/main/res/layout/fragment_product_rating_review_list.xml
+++ b/app/src/main/res/layout/fragment_product_rating_review_list.xml
@@ -517,9 +517,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                app:layout_constraintTop_toBottomOf="@id/filter_layout"
+                app:layout_constraintBottom_toTopOf="@+id/write_review_layout_button"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/filter_layout" />
 
             <FrameLayout
                 android:id="@+id/write_review_layout_button"
