--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F5F6F8"
+        android:background="#f4fafe"
         android:orientation="vertical"
         tools:context="com.cabral.emaishapay.activities.SignUp">
 
