--- a/app/src/main/res/drawable/ic_blur.xml
+++ b/app/src/main/res/drawable/ic_blur.xml
@@ -1,5 +1,6 @@
-<vector android:alpha="0.53" android:height="26dp"
+<vector android:alpha="0.9" android:height="26dp"
     android:viewportHeight="26" android:viewportWidth="142"
     android:width="142dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#368fc4" android:pathData="M0,0h142v26h-142z"/>
+    <path android:fillColor="#000"
+        android:pathData="M0,0h142v26h-142z"/>
 </vector>
