--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#DDF1FD">
+    android:background="#f4fafe">
 
     <ImageView
         android:src="@drawable/ic_new_bg_pattern"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:alpha=".05"/>
+        android:alpha="0.035"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
