--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.cabral.emaishapay.fragments.WalletHomeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
