--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/windowBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.UserDetailsFragment"
+    tools:context=".fragments.LoanUserDetailsFragment"
     android:id="@+id/parent_layout">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_loan_app"
