--- a/app/src/main/res/layout/fragment_token_auth.xml
+++ b/app/src/main/res/layout/fragment_token_auth.xml
@@ -1,12 +1,15 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#DDF1FD">
+    android:background="#DDF1FD"
+    tools:context=".fragments.TokenAuthFragment">
 
     <ImageView
         android:id="@+id/produce_close"
@@ -48,7 +51,7 @@
         app:layout_constraintBottom_toTopOf="@id/pin_view">
 
         <EditText
-            android:id="@+id/pin_code1_et"
+            android:id="@+id/pin_code1_edt"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
@@ -62,22 +65,7 @@
             android:cursorVisible="false"/>
 
         <EditText
-            android:id="@+id/pin_code2_et"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/round_light_blue_bg"
-            android:gravity="center"
-            android:inputType="numberPassword"
-            android:maxLength="1"
-            android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
-            android:cursorVisible="false"/>
-
-        <EditText
-            android:id="@+id/pin_code3_et"
+            android:id="@+id/pin_code2_edt"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
@@ -92,7 +80,22 @@
             android:cursorVisible="false"/>
 
         <EditText
-            android:id="@+id/pin_code4_et"
+            android:id="@+id/pin_code3_edt"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_light_blue_bg"
+            android:gravity="center"
+            android:inputType="numberPassword"
+            android:maxLength="1"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
+            android:cursorVisible="false"/>
+
+        <EditText
+            android:id="@+id/pin_code4_edt"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
@@ -135,21 +138,21 @@
         <TableRow style="@style/keyboard_row">
 
             <TextView
-                android:id="@+id/t9_key_1"
+                android:id="@+id/tv_key_1"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_one"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_2"
+                android:id="@+id/tv_key_2"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_two"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_3"
+                android:id="@+id/tv_key_3"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_three"
@@ -159,21 +162,21 @@
         <TableRow style="@style/keyboard_row">
 
             <TextView
-                android:id="@+id/t9_key_4"
+                android:id="@+id/tv_key_4"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_four"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_5"
+                android:id="@+id/tv_key_5"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_five"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_6"
+                android:id="@+id/tv_key_6"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_six"
@@ -183,21 +186,21 @@
         <TableRow style="@style/keyboard_row">
 
             <TextView
-                android:id="@+id/t9_key_7"
+                android:id="@+id/tv_key_7"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_seven"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_8"
+                android:id="@+id/tv_key_8"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_eight"
                 android:textColor="#123365" />
 
             <TextView
-                android:id="@+id/t9_key_9"
+                android:id="@+id/tv_key_9"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_nine"
@@ -207,21 +210,21 @@
         <TableRow style="@style/keyboard_row">
 
             <TextView
-                android:id="@+id/t9_key_clear"
+                android:id="@+id/tv_key_clear"
                 style="@style/keyboard_button"
                 android:text="@string/btn_clear"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#2D84B7" />
 
             <TextView
-                android:id="@+id/t9_key_0"
+                android:id="@+id/tv_key_0"
                 style="@style/keyboard_number_button"
                 android:alpha=".56"
                 android:text="@string/number_zero"
                 android:textColor="#123365" />
 
             <ImageView
-                android:id="@+id/t9_key_backspace"
+                android:id="@+id/tv_key_backspace"
                 style="@style/keyboard_button"
                 android:src="@android:drawable/ic_input_delete"
                 android:text="@string/btn_backspace"
@@ -259,3 +262,5 @@
             android:textSize="14sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
