--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -6,7 +6,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.BusinessInformationFragment">
+        tools:context=".fragments.BusinessAccountFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -388,7 +388,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
-                        <fragment
+                        <androidx.fragment.app.FragmentContainerView
                             android:id="@+id/map_fragment"
                             class="com.google.android.gms.maps.SupportMapFragment"
                             android:layout_width="match_parent"
