--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -2,10 +2,10 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.cabral.emaishapay.fragments.WalletHomeFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
+        tools:context="com.cabral.emaishapay.fragments.WalletHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F1F5F8">
